fixing caroucel text overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,14 @@
 ::-webkit-scrollbar {
   display: none;
 }
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
 
 /* For Firefox */
 * {    
